fix animated inputs

--- a/feeCreation.html
+++ b/feeCreation.html
@@ -8,38 +8,85 @@
     <title>Document</title>
     <link rel="stylesheet" href="registration.css">
     <link rel="stylesheet" href="feeCreation.css">
+    <style>
+        .smallParagraph:not(.presentParagraph) {
+            /* background-color: pink; */
+            font-size: 14px;
+            transform: translate(13px, 31px);
+            opacity: 0.5;
+            transition: 0.3s;
+            pointer-events: none;
+        }
 
+        form input {
+            margin-bottom: 0;
+            margin-top: 0;
+        }
+
+        form select {
+            margin-bottom: 0px;
+            margin-top: 26px;
+        }
+
+        .dateInput {
+            margin-top: 26px;
+        }
+
+        .addingOptions p {
+            padding: 0;
+            padding-top: 8px;
+            padding-bottom: 4px;
+        }
+
+        .addingOptions input {
+
+            margin-top: 0;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Создание сбора</h1>
     <p>Пожалуйста, заполните данные о сборе</p>
     <form action="" name="feeCreationForm">
-        <input type="text" placeholder="Тип события" required>
-        <input type="text" placeholder="Кому собираем" required>
+        <p class="smallParagraph">Тип события</p>
+        <input class="animatedInput" type="text" placeholder="" required>
+        <p class="smallParagraph">Кому собираем</p>
+        <input class="animatedInput" type="text" placeholder="" required>
         <div class="dateInput">
-            <input id="dateInput" type="date" onchange="this.nextElementSibling.innerHTML = !this.value ? 'Дата события' : this.value.split('-')[2]+'.'+this.value.split('-')[1]+'.'+this.value.split('-')[0]" id="birthday" name="birthday" required>
+            <input id="dateInput" type="date"
+                onchange="this.nextElementSibling.innerHTML = !this.value ? 'Дата события' : this.value.split('-')[2]+'.'+this.value.split('-')[1]+'.'+this.value.split('-')[0]"
+                id="birthday" name="birthday" required>
             <label for="birthday">Дата рождения</label>
         </div>
-        <input type="text" placeholder="Ссылка на внешнюю копилку/карту" required>
-        <p class="smallParagraph">Ссылки на желаемый подарок
+        <p class="smallParagraph">Ссылка на внешнюю копилку/карту</p>
+        <input class="animatedInput" type="text" placeholder="" required>
+        <p class="smallParagraph presentParagraph">Ссылки на желаемый подарок
             *</p>
         <div class="presents">
             <div class="present" id="present0">
-                <input type="text" placeholder="Ссылка"
-                    value="" required>
+                <input type="text" placeholder="Ссылка" value="" required>
                 <button onclick="addPresent(event)" type="button"></button>
             </div>
         </div>
         <div class="formFooter">
             <div class="formAdding">
-                <input class="addingCheckbox" type="checkbox" name="check" id="addingCheckbox" onchange="setCheckbox(event)">
+                <input class="addingCheckbox" type="checkbox" name="check" id="addingCheckbox"
+                    onchange="setCheckbox(event)">
                 <label for="addingCheckbox">Добавить данные о праздновании</label>
                 <div class="addingOptions">
-                    <input type="text" placeholder="Дата события">
-                    <input type="text" placeholder="Время">
-                    <input type="text" placeholder="Ссылка на место празднования">
-                    <input type="text" placeholder="Дресс-код">
+                    <div class="dateCont">
+                        <p class="smallParagraph">Дата события</p>
+                        <input class="animatedInput" type="text" placeholder="">
+                    </div>
+                    <div class="timeCont">
+                        <p class="smallParagraph">Время</p>
+                        <input class="animatedInput" type="text" placeholder="">
+                    </div>
+                    <p class="smallParagraph">Ссылка на место празднования</p>
+                    <input class="animatedInput" type="text" placeholder="">
+                    <p class="smallParagraph">Дресс-код</p>
+                    <input class="animatedInput" type="text" placeholder="">
                 </div>
             </div>
             <div class="formButtons">
@@ -59,7 +106,7 @@
                 e.target.style.backgroundImage = 'url("delete.svg")'
                 let present = `
                 <div class="present" id="present`+ presentId + `">
-                    <input type="text" placeholder="" value="" onchange='setInput(event)'>
+                    <input type="text" placeholder="Ссылка" value="" onchange='setInput(event)'>
                     <button onclick="addPresent(event, 'remove')" type="button"></button>
                     </div>
                     `;
@@ -85,7 +132,20 @@
             else {
                 presents.style.marginBottom = "200px"
                 addingOptions.style.display = "none"
-                
+
+            }
+        }
+        let inputs = document.getElementsByClassName("animatedInput")
+        for (let i of inputs) {
+            i.onclick = function () {
+                this.previousElementSibling.style.transform = 'none'
+                this.previousElementSibling.style.fontSize = "10px"
+            }
+            i.onblur = function () {
+                if (this.value == "") {
+                    this.previousElementSibling.style.transform = 'translate(13px, 31px)'
+                    this.previousElementSibling.style.fontSize = "14px"
+                }
             }
         }
     </script>
