--- a/formEdit.html
+++ b/formEdit.html
@@ -23,20 +23,42 @@
         .saveBtn {
             width: calc(100% - 88px) !important;
         }
+
+        .smallParagraph {
+            font-size: 14px;
+            transform: translate(13px, 31px);
+            opacity: 0.5;
+            transition: 0.3s;
+            pointer-events: none;
+        }
+
+        form>input {
+            margin-bottom: 0;
+            margin-top: 0;
+        }
+
+        form select {
+            margin-bottom: 0px;
+            margin-top: 26px;
+        }
+
+        .dateInput {
+            margin-top: 26px;
+        }
     </style>
 </head>
 
 <body>
     <h1>Редактирование <br> анкеты</h1>
     <form action="" name="formEditForm">
-        <input type="text" placeholder="Имя и фамилия *" class="required" required>
+        <p class="smallParagraph">Имя и фамилия *</p>
+        <input class="animatedInput" type="text" placeholder="" class="required" required>
         <div class="dateInput">
             <input id="dateInput" type="date"
                 onchange="this.nextElementSibling.innerHTML = !this.value ? 'Дата рождения' : this.value.split('-')[2]+'.'+this.value.split('-')[1]+'.'+this.value.split('-')[0]"
                 id="birthday" name="birthday" required>
             <label for="birthday">Дата рождения</label>
         </div>
-        <!-- <input type="text" id="timeZoneInput" placeholder="Часовой пояс" class="required" style="margin-top: 16px;" required> -->
         <select class="timezone" name="timezone" id="timezone">
             <option value="-12.0"> (GMT -12:00) Эниветок, Кваджалейн </option>
             <option value="-11.0"> (GMT -11:00) Остров Мидуэй, Самоа </option>
@@ -70,8 +92,10 @@
             <option value="11.0"> (GMT +11:00) Магадан, Соломоновы острова, Новая Каледония</option>
             <option value="12.0"> (GMT +12:00) Окленд, Веллингтон, Фиджи, Камчатка</option>
         </select>
-        <input type="text" placeholder="Должность">
-        <input type="text" placeholder="Компания *">
+        <p class="smallParagraph">Должность</p>
+        <input class="animatedInput" type="text" placeholder="">
+        <p class="smallParagraph">Компания *</p>
+        <input class="animatedInput" type="text" placeholder="">
         <div class="formFooter">
             <input type="checkbox" name="check" id="" required>
             <label for="">Я согласен на обработку моих персональных данных в соответствии с Политикой и Пользовательским
@@ -84,9 +108,21 @@
         document.getElementById("dateInput").style.transform = "scaleX(" + (document.getElementById("dateInput").nextElementSibling.offsetWidth) + ")"
         let timeSelect = document.getElementById("timezone")
         const date = new Date();
-        const offset = date.getTimezoneOffset()/ 60 * -1;
-        let timeOption = document.querySelector('option[value="'+(offset).toFixed(1)+'"]').selected = true;
-        // document.getElementById("timeZoneInput").value = "Часовой пояс: " + Intl.DateTimeFormat().resolvedOptions().timeZone
+        const offset = date.getTimezoneOffset() / 60 * -1;
+        let timeOption = document.querySelector('option[value="' + (offset).toFixed(1) + '"]').selected = true;
+        let inputs = document.getElementsByClassName("animatedInput")
+        for (let i of inputs) {
+            i.onclick = function () {
+                this.previousElementSibling.style.transform = 'none'
+                this.previousElementSibling.style.fontSize = "10px"
+            }
+            i.onblur = function () {
+                if (this.value == "") {
+                    this.previousElementSibling.style.transform = 'translate(13px, 31px)'
+                    this.previousElementSibling.style.fontSize = "14px"
+                }
+            }
+        }
     </script>
 </body>
 
