--- a/companyInfoEdit.html
+++ b/companyInfoEdit.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="registration.css">
     <link rel="stylesheet" href="companyRegistration2.css">
     <style>
-        .formFooter button{
+        .formFooter button {
             display: inline-block;
             margin-top: 0 !important;
             vertical-align: middle;
         }
-        .closeBtn{
+
+        .closeBtn {
             width: 48px !important;
             height: 48px;
             margin-right: 8px;
@@ -22,11 +23,36 @@
             background-repeat: no-repeat;
             color: #788bf0 !important;
         }
-        .saveBtn{
+
+        .saveBtn {
             width: calc(100% - 56px) !important;
         }
-        .formFooter{
+
+        .formFooter {
             box-shadow: none;
+        }
+
+        .smallParagraph {
+            /* background-color: pink; */
+            font-size: 14px;
+            transform: translate(13px, 31px);
+            opacity: 0.5;
+            transition: 0.3s;
+            pointer-events: none;
+        }
+
+        form>input {
+            margin-bottom: 0;
+            margin-top: 0;
+        }
+
+        form select {
+            margin-bottom: 0px;
+            margin-top: 26px;
+        }
+
+        .dateInput {
+            margin-top: 26px;
         }
     </style>
 </head>
@@ -34,18 +60,40 @@
 <body>
     <h1>Редактирование <br> информации о <br> компании</h1>
     <form action="" name="companyInfoEditForm">
-        <input type="text" placeholder="Название компании *" required>
-        <input type="text" placeholder="Сфера деятельности *" required>
-        <input type="number" placeholder="Количество человек в компании *" required>
-        <input type="text" placeholder="Ваши имя и фамилия *" required>
-        <input type="text" placeholder="Должность">
-        <input type="text" placeholder="Контактный телефон *" required>
-        <input type="text" placeholder="E-mail *" required>
+        <p class="smallParagraph">Название компании *</p>
+        <input type="text" placeholder="" required>
+        <p class="smallParagraph">Сфера деятельности *</p>
+        <input type="text" placeholder="" required>
+        <p class="smallParagraph">Количество человек в компании *</p>
+        <input type="number" placeholder="" required>
+        <p class="smallParagraph">Ваши имя и фамилия *</p>
+        <input type="text" placeholder="" required>
+        <p class="smallParagraph">Должность</p>
+        <input type="text" placeholder="">
+        <p class="smallParagraph">Контактный телефон *</p>
+        <input type="text" placeholder="" required>
+        <p class="smallParagraph">E-mail *</p>
+        <input type="text" placeholder="" required>
         <div class="formFooter">
             <button class="closeBtn" type="button"></button>
             <button class="saveBtn">Сохранить</button>
         </div>
     </form>
+    <script>
+        let inputs = document.getElementsByTagName("input")
+        for (let i of inputs) {
+            i.onclick = function() {
+                this.previousElementSibling.style.transform = 'none'
+                this.previousElementSibling.style.fontSize = "10px"
+            }
+            i.onblur = function() {
+                if (this.value == "") {
+                    this.previousElementSibling.style.transform = 'translate(13px, 31px)'
+                    this.previousElementSibling.style.fontSize = "14px"
+                }
+            }
+        }
+    </script>
 </body>
 
 </html>
