--- a/userRegistration.html
+++ b/userRegistration.html
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="registration.css">
+    <style>
+        .smallParagraph {
+            font-size: 14px;
+            transform: translate(13px, 31px);
+            opacity: 0.5;
+            transition: 0.3s;
+            pointer-events: none;
+        }
+
+        form>input {
+            margin-bottom: 0;
+            margin-top: 0;
+        }
+
+        form select {
+            margin-bottom: 0px;
+            margin-top: 26px;
+        }
+
+        .dateInput {
+            margin-top: 26px;
+        }
+    </style>
 </head>
+
 <body>
     <img src="woman.svg" alt="">
     <h1>Регистрация</h1>
     <p>Пожалуйста, введите данные для регистрации. После этого вы сможете начать сбор</p>
     <form action="" name="userRegistrationForm">
-        <input type="text" placeholder="Имя и фамилия" class="required" required>
+        <p class="smallParagraph">Имя и фамилия *</p>
+        <input class="animatedInput" type="text" placeholder="" class="required" required>
         <div class="dateInput">
-            <input id="dateInput" type="date" onchange="this.nextElementSibling.innerHTML = !this.value ? 'Дата рождения' : this.value.split('-')[2]+'.'+this.value.split('-')[1]+'.'+this.value.split('-')[0]" id="birthday" name="birthday" required>
+            <input id="dateInput" type="date"
+                onchange="this.nextElementSibling.innerHTML = !this.value ? 'Дата рождения' : this.value.split('-')[2]+'.'+this.value.split('-')[1]+'.'+this.value.split('-')[0]"
+                id="birthday" name="birthday" required>
             <label for="birthday">Дата рождения</label>
         </div>
         <select class="timezone" name="timezone" id="timezone">
@@ -52,7 +80,8 @@
         </select>
         <div class="formFooter">
             <input type="checkbox" name="check" id="" required>
-            <label for="">Я согласен на обработку моих персональных данных в соответствии с Политикой и Пользовательским соглашением</label>
+            <label for="">Я согласен на обработку моих персональных данных в соответствии с Политикой и Пользовательским
+                соглашением</label>
             <button>Сохранить</button>
         </div>
     </form>
@@ -60,9 +89,22 @@
         document.getElementById("dateInput").style.transform = "scaleX(" + (document.getElementById("dateInput").nextElementSibling.offsetWidth) + ")"
         let timeSelect = document.getElementById("timezone")
         const date = new Date();
-        const offset = date.getTimezoneOffset()/ 60 * -1;
-        let timeOption = document.querySelector('option[value="'+(offset).toFixed(1)+'"]').selected = true;
-        // document.getElementById("timeZoneInput").value = "Часовой пояс: " + Intl.DateTimeFormat().resolvedOptions().timeZone
+        const offset = date.getTimezoneOffset() / 60 * -1;
+        let timeOption = document.querySelector('option[value="' + (offset).toFixed(1) + '"]').selected = true;
+        let inputs = document.getElementsByClassName("animatedInput")
+        for (let i of inputs) {
+            i.onclick = function () {
+                this.previousElementSibling.style.transform = 'none'
+                this.previousElementSibling.style.fontSize = "10px"
+            }
+            i.onblur = function () {
+                if (this.value == "") {
+                    this.previousElementSibling.style.transform = 'translate(13px, 31px)'
+                    this.previousElementSibling.style.fontSize = "14px"
+                }
+            }
+        }
     </script>
 </body>
+
 </html>
